[package]
name = "music-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = "0.3.13"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
anyhow = "1.0"
regex = "1.1.8"
home = "0.5.3"
walkdir = "2"